# CMPT842

./: README.md  compose.yml
Multi_Machine_flwr/flower/examples/quickstart-pytorch/: pyproject.toml
Multi_Machine_flwr/flower/examples/quickstart-sklearn-tabular/: pyproject.toml
Multi_Machine_flwr/flower/examples/quickstart-sklearn-tabular/sklearnexample/: task.py
Single_Machine_Flwr/complete/quickstart-compose/: README.md  pyproject.toml
Single_Machine_Flwr/complete/quickstart-compose/quickstart_compose/: client_app.py  server_app.py
Single_Machine_Flwr/complete/quickstart-sklearn-tabular/: pyproject.toml
quickstart-compose/: pyproject.toml
quickstart-compose/quickstart_compose/: __init__.py  client_app.py  server_app.py  task.py
