[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quickstart-compose"
version = "1.0.0"
description = ""
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.10.0",
    "flwr-datasets[vision]>=0.3.0",
    "torch==2.2.1",
    "torchvision==0.17.1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "flower"

[tool.flwr.app.components]
serverapp = "quickstart_compose.server_app:app"
clientapp = "quickstart_compose.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 10
fraction-fit = 1
local-epochs = 10

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 10


[tool.flwr.federations.docker-compose]
address = "127.0.0.1:9093"
insecure = true
